...
                  style: ButtonStyle(
                    backgroundColor: MaterialStateProperty.all(Colors.red),
                  ),
                  onPressed: () {
                    Navigator.pop(context);
                  },
                  child: Text('Back'),
                ),
                SizedBox.fromSize(
                  size: Size(20, 0),
                ),
                ElevatedButton(
                  style: ButtonStyle(
...
                      context,
                      MaterialPageRoute(
                        builder: (context) => ThirdPage(),
                      ),
                    );
                  },
                  child: Text('To Third Page'),
                )
              ],
            ),
          ),
        ],
      ),
...
